--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 .page {
-  max-width: 1600px;
   min-width: 1100px;
-  margin: auto;
-  font-family: Arial, sans-serif;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -24,16 +24,17 @@
 }
 
 .nav__logo {
-  height: 80px;
   width: 58px;
+  height: 80px;
+  margin: 0;
 }
 
 .nav__links {
   display: flex;
-  flex-direction: row;
-  margin: 8px 0 0;
   column-gap: 20px;
   list-style-type: none;
+  padding: 0;
+  margin: 8px 0 0;
 }
 
 .nav__link {
@@ -52,14 +53,16 @@
   line-height: 76px;
   font-weight: 500;
   max-width: 635px;
-  margin-top: 128px;
+  padding: 0;
+  margin: 128px 0 0;
 }
 
 .header__description {
-  max-width: 515px;
   font-size: 20px;
   line-height: 30px;
-  margin-top: 32px;
+  max-width: 515px;
+  padding: 0;
+  margin: 32px 0 0;
 }
 
 .header__image {
@@ -85,15 +88,11 @@
   color: #838383;
 }
 
-ul {
-  display: flex;
-  padding: 0;
-}
-
 .staff {
   background-image: url("../images/staff_picks_background.jpg");
   padding: 100px 0 140px;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .staff__title {
@@ -116,13 +115,13 @@ ul {
 
 .staff__cards {
   max-width: 760px;
-  margin: 68px auto 0 auto;
+  margin: 68px auto 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
   list-style-type: none;
-  padding: 0;
+  padding-left: 0;
 }
 
 .card {
@@ -130,8 +129,8 @@ ul {
   border-radius: 6px;
   padding: 32px 40px 20px 32px;
   box-sizing: border-box;
-  width: 360px;
   height: 420px;
+  width: 360px;
 }
 
 .card__content {
@@ -155,11 +154,13 @@ ul {
 }
 
 .card__footer {
-  margin: auto 0 0;
+  margin: 0;
   font-size: 14px;
   line-height: 20px;
   color: #838383;
+  margin-top: auto;
 }
+
 .events {
   padding: 100px 0 120px 80px;
   display: flex;
@@ -243,31 +244,26 @@ ul {
 }
 
 .person_name_feynman {
-  position: absolute;
   top: -30px;
   left: 319px;
 }
 
 .person_name_burbidge {
-  position: absolute;
   top: 96px;
   right: 125px;
 }
 
 .person_name_cannon {
-  position: absolute;
   bottom: 18px;
   right: 216px;
 }
 
 .person_name_mitchell {
-  position: absolute;
   bottom: 82px;
   left: 142px;
 }
 
 .person_name_tarter {
-  position: absolute;
   top: 79px;
   left: 159px;
 }
@@ -292,4 +288,111 @@ ul {
   text-align: center;
   font-size: 14px;
   margin: 0;
+}
+
+.membership {
+  padding: 100px 0 140px;
+  background-color: #057bf2;
+  color: #ffffff;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 40px;
+}
+
+.step {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 220px;
+}
+
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+}
+
+.footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: #ffffff;
+  padding: 60px 80px;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__column_content_hours {
+  margin-left: auto;
+}
+
+.footer__column_content_social {
+  margin-left: 80px;
+}
+
+.footer__logo {
+  height: 80px;
+  width: 58px;
+}
+
+.footer__column-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__list-item {
+  margin-top: 16px;
+}
+
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.footer__copyright {
+  margin-top: 100px;
+  margin-bottom: 0;
+  margin-left: 0;
 }
